--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   "homepage": "https://github.com/ShaunBillows/call-rates-rest-api#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.9.0",
     "mongoose": "^6.5.3"
-  }, 
+  },
   "engines": {
     "node": "16.15.1"
   }
